--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,13 @@ flake8 = "^7.3.0"
 mypy = "^1.17.1"
 coverage = "^7.10.3"
 flake8-pyproject = "^1.2.3"
+types-tabulate = "^0.9.0"
 
 [tool.black]
 line-length = 88
 target-version = ["py312"]
 include = "\\.pyi?$"
-exclude = '''
+extend-exclude = '''
 /(
     \\.venv
     | \\.git
@@ -41,6 +42,9 @@ exclude = '''
     | \\.mypy_cache
     | build
     | dist
+    | .venv
+    | venv
+    | .env
 )/
 '''
 
